[gd_scene load_steps=8 format=3 uid="uid://ckjxah02b5otu"]

[ext_resource type="Script" uid="uid://ddpkpb5o8ddql" path="res://Scripts/Main.gd" id="1_jw32o"]
[ext_resource type="Script" uid="uid://bksj8edihcum2" path="res://Scripts/GameManager.gd" id="1_rgh2o"]
[ext_resource type="PackedScene" uid="uid://cv6601kg5lopp" path="res://Scenes/Camera_rig.tscn" id="2_o0fkt"]
[ext_resource type="PackedScene" uid="uid://drq2gi5hjr6ru" path="res://Scenes/player.tscn" id="3_845py"]
[ext_resource type="PackedScene" uid="uid://xyyyvxbs7jd6" path="res://Scenes/NPC.tscn" id="4_jw32o"]
[ext_resource type="PackedScene" uid="uid://cwf4tiwwqgk4h" path="res://Scenes/Login.tscn" id="5_pbw6q"]
[ext_resource type="PackedScene" uid="uid://difx6kmd06md7" path="res://Scenes/Register.tscn" id="7_50glp"]

[node name="Main" type="Node3D"]
script = ExtResource("1_jw32o")

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("players_root", "npcs_root", "cam_rig")]
script = ExtResource("1_rgh2o")
player_scene = ExtResource("3_845py")
npc_scene = ExtResource("4_jw32o")
players_root = NodePath("../Players")
npcs_root = NodePath("../npcs_root")
cam_rig = NodePath("../CameraRig")

[node name="WorldRoot" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldRoot"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 13.9756, -13.3999)
shadow_enabled = true

[node name="Players" type="Node3D" parent="."]

[node name="CameraRig" parent="." instance=ExtResource("2_o0fkt")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="LoginUI" parent="UI" instance=ExtResource("5_pbw6q")]

[node name="RegisterUI" parent="UI" instance=ExtResource("7_50glp")]
visible = false

[node name="npcs_root" type="Node3D" parent="."]
